cabal-version:       2.4
name:                yieldfsm-hd44780
version:             0.2.0
license:             BSD-2-Clause
author:              Marek Materzok <tilk@tilk.eu>
maintainer:          Marek Materzok <tilk@tilk.eu>
category:            Hardware
synopsis:            HD44780 display controller using YieldFSM

source-repository head
  type: git
  location: https://github.com/tilk/yieldfsm-hd44780

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -fconstraint-solver-iterations=8

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

  build-depends:
    base >= 4.15 && < 4.16,
    yieldfsm >= 0.2 && < 0.3,
    Cabal,
    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.6.4 && < 1.7,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

custom-setup
  setup-depends:
    base          >= 4.11 && <5,
    Cabal         >= 2.4,
    cabal-doctest >= 1.0.1 && <1.1

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    FSM.HD44780
    FSM.HD44780.Definitions
    FSM.HD44780.Commands
    FSM.HD44780.Controller8bit
    FSM.HD44780.Controller8bitBi
    FSM.HD44780.Controller4bit
    FSM.HD44780.Controller4bitBi

executable helloworld
  import: common-options
  main-is: Shake.hs
  build-depends: base, shake, clash-ghc, yieldfsm-hd44780
  hs-source-dirs: shake

